--- a/linkedList/index.html
+++ b/linkedList/index.html
@@ -10,4 +10,15 @@
 </body>
 </html>
 
-<script src="./insertIntoList.js"></script>
+<!-- <script src="./insertIntoList.js"></script> -->
+
+<script>
+    let count = 0;
+function a(){
+  count = count + 1;
+  return count;
+}
+
+console.log(a())
+console.log(a())
+</script>
